# Project-2-sebbe

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  WinCheck.c  WinCheck.h  game_of_lines.c  game_of_lines.h  global.c  global.h
test/: CMakeLists.txt  test_win_diagonal.c  test_win_horizontal.c  test_win_vertical.c
